<resources>
    <string name="app_name">RebuildMyLife</string>
    <string name="title">Title</string>
    <string name="required">required*</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="date">Date</string>
    <string name="repeat">Repeat</string>
    <string name="notification">Notification</string>
    <string name="urgent">Urgent</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="simple">Simple</string>
    <string name="schedule">Schedule</string>
    <string name="fullscreen">FullScreen</string>
    <string name="task_name">Task Name</string>
    <string name="checkbox">CheckBox</string>
    <string name="today">Today</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>